Fixed main title alignment

--- a/base-style.css
+++ b/base-style.css
@@ -56,7 +56,6 @@ header {
     font-size: 36px;
     font-weight: 900;
     color: transparent;
-    text-align: center;
     a {
       -webkit-text-stroke: 1px white; /*For some reason does not work when applied to h1*/
     }
@@ -138,6 +137,9 @@ main>section:first-child::before {
   }
 }
 @media (max-width: 720px) or ((max-width: 1080px) and (max-height: 400px)) {
+  header {
+    justify-content: start;
+  }
   header nav {
     display: none;
   }
